[gd_scene load_steps=4 format=2]

[ext_resource path="res://LevelComponents/Switch.gd" type="Script" id=1]
[ext_resource path="res://Assets/tileset.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/LeverPull.ogg" type="AudioStream" id=3]

[node name="Switch" type="Node2D"]
script = ExtResource( 1 )
is_on = false

[node name="SwitchOn" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 224, 32, 32 )
_sections_unfolded = [ "Transform" ]

[node name="SwitchOff" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 256, 32, 32 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="Audio_Pulled" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

